[package]
name = "gsm"
version = "0.1.0"
authors = ["Simon Renger <simon.renger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# In one Cargo.toml
[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
git2 = "0.12.0"
